@startuml
'https://plantuml.com/sequence-diagram

class FibonacciIterative {
    - firstNumber: int
    - secondNumber: int
    - tempNumber: int
    + fibonacci(n: int): int
}

class FibonacciRecursive {
    + fibonacci(n: int): int
}

class FibonacciDP {
    - fib: int[]
    + fibonacci(n: int): int
}

FibonacciIterative --> FibonacciRecursive : uses
FibonacciIterative --> FibonacciDP : uses


@enduml